Tweaks/fixes for image store; fix Tweaker rotation
Add public/ui/pin.svg
---

_variables.scss
---
* Rename --gap-border-color as --crop-border-color
* Add --uncropped-border-color

_images-in-cards.scss
---
* Use --uncropped-border-color for .gap with uncropped images
* Use --crop-border-color for .gap.crop
* Remove the border while .dragging
* Set image to opacity: 0.125 while dragging
* Add CSS rule for .pin

filterData.js
---
* Consider crop to be a per-image property, applied on all cards

StoreImage.jsx
---
* Add DEV_HACK to generate correct url for pin.svg during development
* Create `pinned` const so that test for first image can be DRY
* Add "dragging" class to gap and img when dragging starts
* Add listener for dragend, to remove "dragging" class after drop
* Remove unused stubs for inserting an image between existing images
* Set draggable to false for pinned squares
* Show pin image on pinned squares

Picture.jsx
---
* Add rotation explicitly to Tweak props, to show Tweaker at correct
  rotation even when using sunburst

--- a/src/SCSS/_images-in-cards.scss
+++ b/src/SCSS/_images-in-cards.scss
@@ -52,23 +52,28 @@
     position: relative;
     width: var(--image-size);
     height: var(--image-size);
-    overflow: hidden;
+    overflow: hidden; /* to hide excess border of .gap */
     vertical-align: top; /* to leave no gaps between rows */
     cursor: pointer;
 
     .gap {
-      border: 100vmax solid var( --gap-border-color);
+      border: 100vmax solid var(--uncropped-border-color);
+      box-sizing: content-box;
+
+      &.crop {
+        border-color: var(--crop-border-color);
+      }
+
+      &.dragging {
+        border: none;
+      }
     }
 
     /* Show repeated image as unchangeable */
     &.on-all-preview-cards {
       cursor: default;
-
-      .gap {
-        border: 1px var(--image-bg-color) solid;
-        box-sizing: border-box;
-      }
     }
+
 
     .gap,
     .circle {
@@ -98,6 +103,10 @@
     object-fit: contain;
   }
 
+  img.dragging {
+    opacity: 0.125
+  }
+
   .extra {
     div {
       display: inline-block
@@ -105,5 +114,14 @@
     img {
       opacity: 0.25
     }
+  }
+
+  .pin {
+    position: absolute;
+    top: 2px;
+    left: calc(50% - 8px);
+    width: 20px;
+    height: 30px;
+    opacity: 1;
   }
 }
